--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header::after {
 }
 
 .main-nav ul li a:hover, .icon-nav ul li a:hover {
-    color: #007BFF;
+    color: #87D9FF;
 }
 
 .search input {
@@ -100,6 +100,11 @@ header::after {
 #userGreeting {
     cursor: pointer;
 }
+
+
+
+
+
 
 /* Style pour la ligne séparatrice */
 .ligne-separatrice {
@@ -173,9 +178,17 @@ header::after {
     
     .carré-avec-bordure h3 {
         margin-bottom: 10px;
+            text-decoration: none !important;
     }
 
+    .ligne-carrés .carré-avec-bordure h3 a {
+    text-decoration: none;
+    color: inherit;
+    }   
 
+    .ligne-carrés .carré-avec-bordure h3 a:hover {
+        color: white;
+        }   
 
 
 /* Nos produits */
@@ -190,28 +203,118 @@ header::after {
 }
 
 .product {
-    background-color: #87D9FF;
+    background-color: #87D9FF;;
     border-radius: 15px;
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
-    height: 300px; 
+    height: 100%; /* Change to 100% */
 }
-        
+
 .product img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 70%; /* Adjust the percentage based on your preference */
     height: auto;
     width: auto;
+    margin-bottom: 10px; /* Add margin to separate image and text */
 }
-        
+
+.product p {
+    margin: 0; /* Remove default margin for paragraphs */
+    overflow: hidden; /* Prevent text overflow */
+}
+
 .filters {
     margin-top: 15px;
     margin-bottom: 20px;
-    text-align: center; 
+    text-align: center;
+}
+
+.product-info {
+    text-align: center;
+}
+
+/* Style pour la case à cocher */
+.product-info input[type="checkbox"] {
+    vertical-align: middle;
+    margin-right: 10px; /* Alignement vertical au centre */
+    margin-bottom: 10px;
+}
+
+.compare-label {
+    color: black;
+    display: inline-block;
+    vertical-align: middle; /* Alignement vertical au centre */
+    margin-right: 5px; /* Ajustez l'espacement selon vos préférences */
+    margin-bottom: 10px;
+}
+
+/* Style pour l'image du produit */
+.product-info img {
+    max-width: 100%;
+    max-height: 150px; /* Ajustez la hauteur selon vos besoins */
+    width: 100%; /* La largeur de l'image prendra 100% de la largeur de son conteneur */
+    height: auto; /* La hauteur sera ajustée automatiquement pour conserver les proportions */
+    object-fit: cover; /* L'image sera rognée ou étirée pour couvrir toute la boîte tout en conservant les proportions */
+    margin-bottom: 10px;
+}
+
+/* Style pour le nom du produit */
+.product-info p {
+    color: #333;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+/* Style pour le prix du produit */
+.product-info p.price {
+    color: #9167c5; /* Couleur orange pour le prix, ajustez selon vos préférences */
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+/* Style pour le lien "Voir plus" */
+.product-info a {
+    text-decoration: none;
+    background-color: #333; /* Couleur de fond verte pour le lien, ajustez selon vos préférences */
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+/* Effet de survol pour le lien "Voir plus" */
+.product-info a:hover {
+    background-color: #636363;
 }
 
 
+/* Style de la boîte de comparaison */
+.comparer {
+    position: fixed;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+    z-index: 999;
+}
+
+.compare-box {
+    position: fixed;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    background-color: #3498db;
+    color: #fff;
+    padding: 15px;
+    display: none;
+    z-index: 999;
+}
 
 
 
@@ -244,55 +347,12 @@ header::after {
 
 
 /* Page de contact */
-.container {
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-h1 {
-    text-align: center;
-}
 .contact-info {
-    margin-bottom: 20px;
+    margin-top: 10px;
 }
+
 .contact-info p {
-    margin: 5px 0;
-}
-.contact-form {
-    margin-top: 20px;
-}
-.form-group {
-    margin-bottom: 20px;
-}
-.container label {
-    display: block;
-    font-weight: bold;
-}
-.container input, .container textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-
-.container textarea {
-    height: 150px;
-}
-
-.container button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.container button:hover {
-    background-color: #0056b3;
+    margin-top: 15px;
 }
 
 /* Page de connexion */
@@ -408,6 +468,16 @@ footer ul {
 footer li {
     margin-bottom: 5px;
 }
+
+footer a {
+    text-decoration: none !important;
+    color: #fff;
+}
+
+footer a:hover {
+    color: #87D9FF;
+}
+
 
 footer img {
     max-width: 100%;
