--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     background-color: #F5EDED;
 }
 
+
+
+
+
+
 /* Menu de navigation */
 header {
     background-color: #333;
@@ -77,29 +82,28 @@ header::after {
     border-radius: 5px;
     border: 1px solid #ccc;
 }
+    /* Bouton connexion */
+    #dropdownMenu {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
 
-/* Bouton connexion */
-#dropdownMenu {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
+    #dropdownMenu.show {
+        display: block;
+    }
 
-#dropdownMenu.show {
-    display: block;
-}
+    #dropdownMenu li {
+        padding: 12px;
+        text-decoration: none;
+        display: block;
+    }
 
-#dropdownMenu li {
-    padding: 12px;
-    text-decoration: none;
-    display: block;
-}
-
-#userGreeting {
-    cursor: pointer;
-}
+    #userGreeting {
+        cursor: pointer;
+    }
 
 
 
@@ -118,34 +122,36 @@ header::after {
 
 
 
-/* Page d'accueil */
-    /* Carousel */
+
+
+/* [PAGE] Accueil */
+    /* Carousel d'images */
     .carousel-container {
-        max-width: 80%; /* Définir la largeur maximale souhaitée */
-        margin: 0 auto; /* Centrer le carrousel */
-        overflow: hidden; /* Masquer le contenu qui dépasse */
+        max-width: 80%; 
+        margin: 0 auto; 
+        overflow: hidden; 
     }
 
     .carousel-inner {
         display: flex;
         transition: transform 0.5s ease-in-out;
-        width: 100%; /* Assurer que la largeur de l'élément interne est correcte */
+        width: 100%; 
     }
 
     .carousel-item {
-        flex: 0 0 auto; /* Empêcher le redimensionnement des images */
-        width: 100%; /* Assurer que chaque élément occupe toute la largeur du conteneur */
+        flex: 0 0 auto; 
+        width: 100%; 
     }
 
     .carousel-item img {
         width: 100%; 
-        height: 600px; /* Ajuster la hauteur selon vos besoins */
+        height: 600px; 
         object-fit: cover; 
         display: block;
         margin: 0 auto; 
     }
 
-    /* Nouveautés etc */
+    /* Sections nouveautés, meilleurs produits */
     .ligne-carrés {
         display: flex;
         justify-content: space-between; 
@@ -190,8 +196,16 @@ header::after {
         color: white;
         }   
 
+    .button {
+        background-color: #333; 
+        color: #fff;
+        padding: 10px 15px;
+        border-radius: 10px;
+        border-style: none;
+    }
 
-/* Nos produits */
+
+/* [PAGE] Nos produits */
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
@@ -208,20 +222,18 @@ header::after {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
-    height: 100%; /* Change to 100% */
+    height: 100%; 
 }
 
 .product img {
-    max-width: 100%;
-    max-height: 70%; /* Adjust the percentage based on your preference */
-    height: auto;
-    width: auto;
-    margin-bottom: 10px; /* Add margin to separate image and text */
+    width: 100%; 
+    height: 200px; 
+    object-fit: cover; 
 }
 
 .product p {
-    margin: 0; /* Remove default margin for paragraphs */
-    overflow: hidden; /* Prevent text overflow */
+    margin: 0; 
+    overflow: hidden; 
 }
 
 .filters {
@@ -234,32 +246,16 @@ header::after {
     text-align: center;
 }
 
-/* Style pour la case à cocher */
-.product-info input[type="checkbox"] {
-    vertical-align: middle;
-    margin-right: 10px; /* Alignement vertical au centre */
-    margin-bottom: 10px;
-}
-
-.compare-label {
-    color: black;
-    display: inline-block;
-    vertical-align: middle; /* Alignement vertical au centre */
-    margin-right: 5px; /* Ajustez l'espacement selon vos préférences */
-    margin-bottom: 10px;
-}
-
-/* Style pour l'image du produit */
 .product-info img {
     max-width: 100%;
-    max-height: 150px; /* Ajustez la hauteur selon vos besoins */
-    width: 100%; /* La largeur de l'image prendra 100% de la largeur de son conteneur */
-    height: auto; /* La hauteur sera ajustée automatiquement pour conserver les proportions */
-    object-fit: cover; /* L'image sera rognée ou étirée pour couvrir toute la boîte tout en conservant les proportions */
+    max-height: 150px; 
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
     margin-bottom: 10px;
 }
 
-/* Style pour le nom du produit */
+
 .product-info p {
     color: #333;
     font-size: 16px;
@@ -267,53 +263,168 @@ header::after {
     margin-bottom: 5px;
 }
 
-/* Style pour le prix du produit */
 .product-info p.price {
-    color: #9167c5; /* Couleur orange pour le prix, ajustez selon vos préférences */
+    color: #9167c5; 
     font-size: 18px;
     margin-bottom: 10px;
 }
 
-/* Style pour le lien "Voir plus" */
 .product-info a {
     text-decoration: none;
-    background-color: #333; /* Couleur de fond verte pour le lien, ajustez selon vos préférences */
+    background-color: #333; 
     color: white;
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
-/* Effet de survol pour le lien "Voir plus" */
 .product-info a:hover {
     background-color: #636363;
 }
 
+    /* Style pour la case comparer */
+    .product-info input[type="checkbox"] {
+        vertical-align: middle;
+        margin-right: 10px; 
+        margin-bottom: 10px;
+    }
 
-/* Style de la boîte de comparaison */
-.comparer {
-    position: fixed;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    background-color: #3498db;
-    color: #fff;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-    z-index: 999;
+    .compare-label {
+        color: black;
+        display: inline-block;
+        vertical-align: middle; 
+        margin-right: 5px; 
+        margin-bottom: 10px;
+    }
+
+    .comparer {
+        position: fixed;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        background-color: #87D9FF;
+        color: #fff;
+        padding: 10px 15px;
+        border: none;
+        cursor: pointer;
+        z-index: 999;
+    }
+
+    .compare-box {
+        position: fixed;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        background-color: #87D9FF;
+        color: #fff;
+        padding: 15px;
+        display: none;
+        z-index: 999;
+    }
+
+
+
+
+
+
+/* [PAGE] Détails du produit */
+.product-details {
+    max-width: 1000px; 
+    width: 80%;
+    margin: 50px auto;
+    background-color: #87D9FF;;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.compare-box {
-    position: fixed;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    background-color: #3498db;
-    color: #fff;
-    padding: 15px;
-    display: none;
-    z-index: 999;
+.product-details img {
+    display: block;
+    width: 100%; 
+    height: 200px; 
+    object-fit: cover; 
+    margin: 0 auto 20px;
+}
+
+
+.product-details p {
+    margin: 0;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.texte {
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    color: #333;
+}
+
+.testt {
+    width: auto;
+    height: 100% ! important;
+}
+
+
+
+
+
+/* [PAGE] Comparateur */
+.comparison-product-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+
+/* Styles pour chaque produit comparé */
+.comparison-product {
+    width: 45%; 
+    padding: 20px;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+}
+
+.comparison-product-image {
+    width: 100%; 
+    height: 300px; 
+    object-fit: cover; 
+}
+
+.comparison-title {
+    font-size: 40px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+/* Styles pour le titre du produit */
+.comparison-product-title {
+    font-size: 18px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+/* Styles pour la description du produit */
+.comparison-product-description {
+    font-size: 14px;
+    margin-top: 5px;
+    text-align: center;
+}
+
+/* Styles pour le prix du produit */
+.comparison-product-price {
+    font-size: 16px;
+    margin-top: 5px;
+    text-align: center;
+}
+
+/* Styles pour les spécifications du produit */
+.comparison-product-specs {
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
 }
 
 
@@ -346,6 +457,11 @@ header::after {
 
 
 
+
+
+
+
+
 /* Page de contact */
 .contact-info {
     margin-top: 10px;
@@ -354,6 +470,12 @@ header::after {
 .contact-info p {
     margin-top: 15px;
 }
+
+.contact-container {
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
+
 
 /* Page de connexion */
 .row {
@@ -367,6 +489,7 @@ header::after {
     padding: 20px;
     border-right: 1px solid #000000;
     margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .column:last-child {
@@ -493,4 +616,12 @@ footer img {
 .logo-reseau {
     width: 30px; 
     margin-right: 10px;
+}
+
+.button-newsletter {
+    background-color: #87D9FF;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border-style: none;
 }
