--- a/PAGES/FAQ_CSS.css
+++ b/PAGES/FAQ_CSS.css
@@ -101,79 +101,46 @@ header::after {
     cursor: pointer;
 }
 
-
-/* Styles pour le conteneur principal */
-.pagemain {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+/* [PAGE FAQ] */
+.container {
+    max-width: 800px; /* Réduit la largeur pour une meilleure lisibilité */
+    margin: 0 auto;
+    padding: 30px;
 }
 
-/* Styles pour le titre */
-.pagemain h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-  text-align: center;
+.FAQ {
+    margin-top: 20px;
+    margin-bottom: 25px;
+    margin-left: 250px;
+    max-width: 200px;
+    align-items: center;
 }
 
-/* Styles pour la séparation */
-.separation {
-  height: 2px;
-  background-color: #ddd;
-  margin-bottom: 20px;
+details {
+    margin-bottom: 30px; /* Augmente l'espacement entre chaque section */
+    border: 2px solid #094fac;
+    border-radius: 5px;
+    padding: 20px; /* Réduit le rembourrage pour un aspect plus compact */
+    background-color: #87D9FF;
+    color: black;
+    font-size: 20px; /* Réduit légèrement la taille de la police */
 }
 
-/* Styles pour les groupes de champs */
-.groupe {
-  margin-bottom: 20px;
+summary {
+    cursor: pointer;
+    font-weight: bold;
 }
 
-/* Styles pour les libellés */
-.groupe label {
-  display: block;
-  font-size: 16px;
-  margin-bottom: 5px;
+details[open] {
+    background-color: #87D9FF;
+    color: black;
 }
 
-/* Styles pour les champs de saisie */
-.groupe input[type="text"],
-.groupe input[type="email"],
-.groupe textarea {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+/* Augmente la taille de la police pour le texte à l'intérieur des détails */
+details p {
+    font-size: 18px;
+    margin-top: 10px; /* Ajoute un espace en haut du paragraphe */
 }
-
-/* Styles pour les icônes */
-.groupe i {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  color: #888;
-}
-
-/* Styles pour le bouton */
-.pied-formulaire button[type="submit"] {
-  padding: 10px 20px;
-  font-size: 18px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-/* Styles pour le bouton au survol */
-.pied-formulaire button[type="submit"]:hover {
-  background-color: #0056b3;
-}
-
 
 
 
